add new items:ibuprofen,a box of ibuprofen and concentrated coal

--- a/src/main/resources/assets/unusual-ideas/lang/en_us.json
+++ b/src/main/resources/assets/unusual-ideas/lang/en_us.json
@@ -22,6 +22,9 @@
   "item.unusual-ideas.titanium_chestplate": "titanium chestplate",
   "item.unusual-ideas.titanium_leggings": "titanium leggings",
   "item.unusual-ideas.titanium_boots": "titanium boots",
+  "item.unusual-ideas.ibuprofen": "ibuprofen",
+  "item.unusual-ideas.a_box_of_ibuprofen": "a box of ibuprofen",
+  "item.unusual-ideas.concentrated_coal": "concentrated coal",
 
   "block.unusual-ideas.titanium_block": "titanium block",
   "block.unusual-ideas.raw_titanium_block": "raw titanium block",
