--- a/src/main/resources/assets/unusual-ideas/lang/zh_cn.json
+++ b/src/main/resources/assets/unusual-ideas/lang/zh_cn.json
@@ -22,6 +22,9 @@
   "item.unusual-ideas.titanium_chestplate": "钛胸甲",
   "item.unusual-ideas.titanium_leggings": "钛护腿",
   "item.unusual-ideas.titanium_boots": "钛靴子",
+  "item.unusual-ideas.ibuprofen": "布洛芬",
+  "item.unusual-ideas.a_box_of_ibuprofen": "一盒布洛芬",
+  "item.unusual-ideas.concentrated_coal": "浓缩煤炭",
 
   "block.unusual-ideas.zirconium_block": "锆石块",
   "block.unusual-ideas.zirconium_ore": "锆石矿",
